Desenvolvendo Home Page

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,7 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/usuario.css" />
-  <link rel="icon" href="./assets/icon/iconeORappa.ico">
+  <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
@@ -22,7 +22,7 @@
       <h1 class="titulo">O Rappa</h1>
       <ul class="navbar">
         <li>
-          <a href="index.html">Inicial</a>
+          <a href="texte.html">Inicial</a>
         </li>
         <li>
           <a href="simulador.html">Simulador</a>
