--- a/public/index.html
+++ b/public/index.html
@@ -1,99 +1,66 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Convergence&family=Lato:wght@300;400;700;900&family=Mukta:wght@300;400;600;700;800&family=Noto+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
 
-  <title>O Rappa | Página Inicial</title>
-
-  <script src="./js/sessao.js"></script>
-
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="./assets/icon/iconeORappa.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
-  <div class="header">
-    <div class="container">
-      <h1 class="titulo">O Rappa</h1>
-      <ul class="navbar">
-        <li class="agora">
-          <a href="#">Inicial</a>
-        </li>
-        <li>
-          <a href="simulador.html">Simulador</a>
-        </li>
-        <li>|</li>
-        <li>
-          <a href="login.html">Login</a>
-        </li>
-        <li>
-          <a href="cadastro.html">Cadastro</a>
-        </li>
-      </ul>
+    <div class="header">
+        <div class="container">
+            <h1 class="titulo">O Rappa</h1>
+            <ul class="navbar">
+                <li class="agora">
+                    <a href="texte.html">Inicial</a>
+                </li>
+                <li>
+                    <a href="simulador.html">Sobre</a>
+                </li>
+                <li>|</li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li>
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
-
-  <div class="banner">
-
-  </div>
-
-  <div class="social">
-      <div class="container">
-
-      </div>
-    </div> 
-
-  <!-- <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
-      </div>
-    </div> -->
-  <!-- <footer class="rodape">
-      <div class="column1">
-        <h2><img src="../public/assets/imgs/theicon copiar.png" alt="LogoRHS">O Rappa</h2>
-        <p>RHS é uma empresa de tecnologia voltada a preservação das espécies dos répteis através do
-          monitoramento de seus habitats, com o objetivo de facilitar para os criadores de répteis em sua
-          manutenção.
-        </p>
-        <div class="logos">
-          <a href="https://www.facebook.com"><img class="icone1" src="IMG/iconefacebook.png" alt="Ícone do Facebook"></a>
-          <a href="https://www.instagram.com"><img class="icone2" src="IMG/iconeinstagram.png"
-              alt="Ícone do Instagram"></a>
-          <a href="https://www.twitter.com"><img class="icone3" src="IMG/iconetwitterx.png" alt="Ícone do Twitter"></a>
-          <a href="https://br.linkedin.com"><img class="icone4" src="IMG/iconelinkedin.png" alt="Ícone do Linkedin"></a>
+    <div class="conjunto"></div> <!-- Gif do Fundo -->
+    <div class="conjunto2">
+        <div class="sobreTexto">
+            <p>O Rappa, banda carioca formada em 1993, é conhecida por sua fusão única de reggae, rock, rap e música popular brasileira. Com letras que abordam questões sociais e políticas, a banda conquistou uma legião de fãs ao longo dos anos. Seus álbuns icônicos, como "Lado B Lado A" e "O Silêncio Q Precede O Esporro",marcaram a música brasileira com mensagens de resistência e esperança. <br><br> Saiba Mais </p>
         </div>
-      </div>
-      <div class="column2">
-        <h2>Menu</h2>
-        <div class="lista"></div>
-        <a href="HomePage.html" class="uno">Início</a>
-        <a href="Sobre.html">Sobre Nós</a>
-        <a href="ConhecaEquipe.html">Equipe</a>
-        <a href="simulador.html">Simulador</a>
-        <a href="cadastro2.html">Cadastro</a>
-        <a href="login2.html">Login</a>
-      </div>
-      <div class="column3">
-        <div class="logos2">
-          <h2>Contato</h2>
-          <p><img class="icone5" src="IMG/iconelocal.png" alt="Ícone do local"><a href="">Rua Haddock Lobo,
-              595 <br><b>Cerqueira César, São Paulo</b></a></p>
-          <p><img class="icone6" src="IMG/iconetelefone.png" alt="Ícone do número"><a href=""></a>+55
-            94488-4530 <br> +55 96723-2879</a></p>
-          <p><img class="icone7" src="IMG/iconeemail.png" alt="Ícone do email"><a
-              href="">reptihabitatsolutions@gmail.com</a></p>
+        <div class="sobreFoto">
+            <img src="../public/assets/imgs/Banda.jpg" alt="">
         </div>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2881607958625!2d-46.66425002467007!3d-23.55809197880215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59d2a5270055%3A0x3c7ea4f4c7d51fb6!2sRua%20Haddock%20Lobo%2C%20595%20-%20Cerqueira%20C%C3%A9sar%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001414-001!5e0!3m2!1spt-BR!2sbr!4v1714872768626!5m2!1spt-BR!2sbr"
-          width="260" height="260" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-    </footer> -->
+    </div>
 
+    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, suscipit, cupiditate itaque voluptas animi accusamus libero hic excepturi numquam fugit voluptatum, sit corporis? Dolores praesentium maxime aliquid hic molestias explicabo. -->
+    <div class="wrapper">
+        <div class="items">
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/1ORappa.jpg)">O Rappa
+            </div>
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/2RappaMundi.jpg)">Rappa
+                Mundi</div>
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/3LadoBLadoA.jpg)">Lado B
+                Lado A</div>
+            <div class="item" tabindex="0"
+                style="background-image: url(../public/assets/albuns/4OSilêncioQPrecedeOEsporro.jpg)">O Silêncio Q
+                Precede O Esporro</div>
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/5SeteVezes.jpg)">7 Vezes
+            </div>
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/6NuncaTemFim.jpg)">Nunca
+                Tem Fim...</div>
+            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/7Acustico.jpg)">Acústico
+            </div>
+
+
+
+        </div>
+
+    </div>
 </body>
-</html>
