--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
 
     <!-- <link rel="stylesheet" href="./css/estilo.css"> -->
     <link rel="stylesheet" href="./css/usuario.css">
-    <link rel="icon" href="./assets/icon/iconeORappa.ico">
+    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -23,7 +23,7 @@
             <h1 class="titulo">O Rappa</h1>
             <ul class="navbar">
                 <li>
-                    <a href="index.html">Inicial</a>
+                    <a href="texte.html">Inicial</a>
                 </li>
                 <li>
                     <a href="simulador.html">Simulador</a>
