--- a/public/simulador.html
+++ b/public/simulador.html
@@ -11,7 +11,7 @@
     <script src="./js/sessao.js"></script>
 
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/iconeORappa.ico">
+    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -23,7 +23,7 @@
             <h1 class="titulo">AquaTech</h1>
             <ul class="navbar">
                 <li>
-                    <a href="./index.html">Inicial</a>
+                    <a href="texte.html">Inicial</a>
                 </li>
                 <li class="agora">Simulador</li>
                 <li>|</li>
