Inserção de perguntas quiz (x20)

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -25,16 +25,106 @@
 <script>
     const quizData = [
         {
-            question: "Qual o sobrenome de Billie?",
-            options: ["Ailash", "Eillish", "Eilish", "Eilich"],
-            answer: "Eilish"
+            question: "Qual foi o ano de formação da banda O Rappa?",
+            options: ["1991", "1992", "1993", "1994"],
+            answer: "1993"
         },
         {
-            question: "Em que ano Billie nasceu?",
-            options: ["2004", "2002", "2000", "1990"],
-            answer: "2002"
+            question: "Entre os integrantes da banda, dois deles possuem o primeiro nome igual, qual é esse nome?",
+            options: ["Lauro", "Marcos", "Diego", "Marcelo"],
+            answer: "Marcelo"
         },
-        // Add more questions here...
+        {
+            question: "Qual é o nome do primeiro álbum da banda O Rappa?",
+            options: ["Rappa Mundi", "O Rappa", "Lado B Lado A", "Nunca Tem Fim..."],
+            answer: "O Rappa"
+        },
+        {
+            question: "Quem foi o vocalista principal de O Rappa desde sua formação até 2017?",
+            options: ["Marcelo Falcão", "Marcelo Yuka", "Xandão", "Lauro Farias"],
+            answer: "Marcelo Falcão"
+        },
+        {
+            question: "Em que ano O Rappa anunciou seu término?",
+            options: ["2015", "2017", "2018", "2020"],
+            answer: "2017"
+        },
+        {
+            question: "Qual canção de O Rappa fala sobre a desigualdade social e foi lançada no álbum 'Lado B Lado A'",
+            options: ["O Que Sobrou do Céu", "Minha Alma", "A Feira", "Me Deixa"],
+            answer: "Minha Alma"
+        },
+        {
+            question: "Qual membro do O Rappa é conhecido por tocar guitarra?",
+            options: ["Marcelo Falcão", "Marcelo Lobato", "Xandão", "Lauro Farias"],
+            answer: "Xandão"
+        },
+        {
+            question: "Em qual ano o álbum 'Nunca Tem Fim...' foi lançado?",
+            options: ["2008", "2013", "2014", "2016"],
+            answer: "2014"
+        },
+        {
+            question: "Qual membro da banda sofreu um atentado e ficou paraplégico em 2000?",
+            options: ["Marcelo Falcão", "Marcelo Yuka", "Xandão", "Lauro Farias"],
+            answer: "Marcelo Yuka"
+        },
+        {
+            question: "Qual é a música do O Rappa que tem a letra '...está armada e apontada para a cara do sossego'",
+            options: ["Anjos", "Me Deixa", "O Que Sobrou do Céu", "Minha Alma"],
+            answer: "Minha Alma"
+        },
+        {
+            question: "Qual foi o último álbum de estúdio lançado pela banda O Rappa?",
+            options: ["Nunca Tem Fim...", "7 Vezes", "Lado B Lado A", "O Silêncio Q Precede O Esporro"],
+            answer: "Nunca Tem Fim..."
+        },
+        {
+            question: "Qual música de O Rappa tem a letra 'Se meus joelhos não doessem mais'",
+            options: ["Anjos", "Pescador de Ilusões", "O Que Sobrou do Céu", "Minha Alma"],
+            answer: "Pescador de Ilusões"
+        },
+        {
+            question: "Em qual cidade O Rappa foi formado?",
+            options: ["São Paulo", "Salvador", "Rio de Janeiro", "Belo Horizonte"],
+            answer: "Rio de Janeiro"
+        },
+        {
+            question: "Qual foi a primeira música de O Rappa a ganhar grande notoriedade?",
+            options: ["Rodo Cotidiano", "Pescador de Ilusões", "A Feira", "Me Deixa"],
+            answer: "Pescador de Ilusões"
+        },
+        {
+            question: "Qual animal aparece na capa do disco 'O Silêncio Q Precede O Esporro'?",
+            options: ["Dragão", "Peixe", "Cobra", "Lagarto"],
+            answer: "Dragão"
+        },
+        {
+            question: "Quantos integrantes a banda possui?",
+            options: ["5 integrantes", "6 integrantes", "3 integrantes", "4 integrantes"],
+            answer: "4 integrantes"
+        },
+        {
+            question: "Ao ler a história da banda, foi citado o intuito de sua criação, acompanhar um cantor que estava em turne no Brasil, qual era o nome do cantor?",
+            options: ["Planet Hemp", "Bob Marley", "Charlie Brown Jr.", "Papa Winnie"],
+            answer: "Papa Winnie"
+        },
+        {
+            question: "Qual álbum, contendo videoclipes icônicos e mensagens de resistência que influenciaram profundamente a música brasileira e continuam a ressoar com novas gerações, teve o maior impacto cultural?",
+            options: ["Nunca Tem Fim...", "Lado B Lado A", "O Silêncio Q Precede o Esporro", "Rappa Mundi"],
+            answer: "Lado B Lado A"
+        },
+        {
+            question: "Quanto tempo durou a banda?",
+            options: ["23 anos", "24 anos", "25 anos", "26 anos"],
+            answer: "25 anos"
+        },
+        {
+            question: "Oi Maykon?",
+            options: ["Oi", "Olá", "Bom dia", "Boa tarde😈"],
+            answer: "Boa tarde😈"
+        },
+        
     ];
 
     function iniciarQuiz() {
