Criação de Dashboard, formulário. Atualização de NavBar e homePage

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -12,7 +12,7 @@
 <body>
     <div class="boxQuiz" id="quiz">
         <h1>Bem Vindo!</h1><br>
-        <h2>Será que você conhece O Rappa?</h2>
+        <h2 id="mensagem" style="display: block;">Será que você conhece O Rappa?</h2>
         <div id="question"></div>
         <div id="options"></div>
         <button id="iniciar" onclick="iniciarQuiz()">Iniciar Quiz</button>
@@ -40,44 +40,14 @@
             answer: "O Rappa"
         },
         {
-            question: "Quem foi o vocalista principal de O Rappa desde sua formação até 2017?",
-            options: ["Marcelo Falcão", "Marcelo Yuka", "Xandão", "Lauro Farias"],
-            answer: "Marcelo Falcão"
-        },
-        {
-            question: "Em que ano O Rappa anunciou seu término?",
-            options: ["2015", "2017", "2018", "2020"],
-            answer: "2017"
-        },
-        {
             question: "Qual canção de O Rappa fala sobre a desigualdade social e foi lançada no álbum 'Lado B Lado A'",
             options: ["O Que Sobrou do Céu", "Minha Alma", "A Feira", "Me Deixa"],
             answer: "Minha Alma"
         },
         {
-            question: "Qual membro do O Rappa é conhecido por tocar guitarra?",
-            options: ["Marcelo Falcão", "Marcelo Lobato", "Xandão", "Lauro Farias"],
-            answer: "Xandão"
-        },
-        {
-            question: "Em qual ano o álbum 'Nunca Tem Fim...' foi lançado?",
-            options: ["2008", "2013", "2014", "2016"],
-            answer: "2014"
-        },
-        {
-            question: "Qual membro da banda sofreu um atentado e ficou paraplégico em 2000?",
-            options: ["Marcelo Falcão", "Marcelo Yuka", "Xandão", "Lauro Farias"],
-            answer: "Marcelo Yuka"
-        },
-        {
             question: "Qual é a música do O Rappa que tem a letra '...está armada e apontada para a cara do sossego'",
             options: ["Anjos", "Me Deixa", "O Que Sobrou do Céu", "Minha Alma"],
             answer: "Minha Alma"
-        },
-        {
-            question: "Qual foi o último álbum de estúdio lançado pela banda O Rappa?",
-            options: ["Nunca Tem Fim...", "7 Vezes", "Lado B Lado A", "O Silêncio Q Precede O Esporro"],
-            answer: "Nunca Tem Fim..."
         },
         {
             question: "Qual música de O Rappa tem a letra 'Se meus joelhos não doessem mais'",
@@ -90,19 +60,9 @@
             answer: "Rio de Janeiro"
         },
         {
-            question: "Qual foi a primeira música de O Rappa a ganhar grande notoriedade?",
-            options: ["Rodo Cotidiano", "Pescador de Ilusões", "A Feira", "Me Deixa"],
-            answer: "Pescador de Ilusões"
-        },
-        {
             question: "Qual animal aparece na capa do disco 'O Silêncio Q Precede O Esporro'?",
             options: ["Dragão", "Peixe", "Cobra", "Lagarto"],
             answer: "Dragão"
-        },
-        {
-            question: "Quantos integrantes a banda possui?",
-            options: ["5 integrantes", "6 integrantes", "3 integrantes", "4 integrantes"],
-            answer: "4 integrantes"
         },
         {
             question: "Ao ler a história da banda, foi citado o intuito de sua criação, acompanhar um cantor que estava em turne no Brasil, qual era o nome do cantor?",
@@ -115,19 +75,15 @@
             answer: "Lado B Lado A"
         },
         {
-            question: "Quanto tempo durou a banda?",
-            options: ["23 anos", "24 anos", "25 anos", "26 anos"],
-            answer: "25 anos"
-        },
-        {
-            question: "Oi Maykon?",
-            options: ["Oi", "Olá", "Bom dia", "Boa tarde😈"],
-            answer: "Boa tarde😈"
+            question: "Em que ano O Rappa anunciou seu término?",
+            options: ["2015", "2017", "2018", "2020"],
+            answer: "2017"
         },
         
     ];
 
     function iniciarQuiz() {
+        mensagem.style.display = 'none'
         document.getElementById("iniciar").style.display = 'none';
         const questionElement = document.getElementById("question");
         const optionsElement = document.getElementById("options");
@@ -166,11 +122,12 @@
         }
 
         function showResult() {
+
+
             document.getElementById("quiz").innerHTML = `
                 <h1>Quiz Concluído</h1>
                 <p>Você acertou ${score} de um total de ${quizData.length} questões</p>
                 <button id="restart" onclick="reiniciarQuiz()">Recomeçar Quiz</button>
-
                 <button id="restart" onclick="voltarDash()">voltar para Dashboard</button>
             `;
         }
