--- a/public/quiz2.html
+++ b/public/quiz2.html
@@ -1,13 +1,13 @@
 <input type="radio" id="duvida1a" class="btn1" name="duvida1" value="1">
-<label class="duvida1" for="duvida1a"></label>
+<label class="duvida1" for="duvida1a"></label><br>
 <input type="radio" id="duvida1b" class="btn2" name="duvida1" value="2">
-<label class="duvida2" for="duvida1b"></label>
+<label class="duvida2" for="duvida1b"></label><br>
 <input type="radio" id="duvida1c" class="btn3" name="duvida1" value="3">
-<label class="duvida3" for="duvida1c"></label>
+<label class="duvida3" for="duvida1c"></label><br>
 <input type="radio" id="duvida1d" class="btn4" name="duvida1" value="4">
-<label class="duvida4" for="duvida1d"></label>
+<label class="duvida4" for="duvida1d"></label><br>
 <input type="radio" id="duvida1e" class="btn5" name="duvida1" value="5">
-<label class="duvida5" for="duvida1e"></label> <br>
+<label class="duvida5" for="duvida1e"></label><br>
 
 
 <script>
