--- a/public/login.html
+++ b/public/login.html
@@ -139,10 +139,10 @@
                     console.log(JSON.stringify(json));
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.IDADE_USUARIO = json.id;
+                    sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
+                        window.location = "./quiz.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
