--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -22,14 +22,14 @@
       <h1 class="titulo">O Rappa</h1>
       <ul class="navbar">
         <li>
-          <a href="texte.html">Inicial</a>
+          <a href="./texte.html">Inicial</a>
         </li>
         <li>
-          <a href="simulador.html">Simulador</a>
+          <a href="./simulador.html">Simulador</a>
         </li>
         <li>|</li>
         <li>
-          <a href="login.html">Login</a>
+          <a href="./login.html">Login</a>
         </li>
         <li class="agora">
           <a href="#">Cadastro</a>
